WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
170610
Audible autoplay videos should not get paused when outside the viewport
https://bugs.webkit.org/show_bug.cgi?id=170610
Summary
Audible autoplay videos should not get paused when outside the viewport
Chris Dumez
Reported
2017-04-07 11:58:35 PDT
Audible autoplay videos should not get paused when outside the viewport.
Attachments
Patch
(7.56 KB, patch)
2017-04-07 13:37 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2017-04-07 11:59:21 PDT
<
rdar://problem/31505984
>
Chris Dumez
Comment 2
2017-04-07 13:37:42 PDT
Created
attachment 306532
[details]
Patch
WebKit Commit Bot
Comment 3
2017-04-07 15:04:54 PDT
Comment on
attachment 306532
[details]
Patch Clearing flags on attachment: 306532 Committed
r215120
: <
http://trac.webkit.org/changeset/215120
>
WebKit Commit Bot
Comment 4
2017-04-07 15:04:55 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug