Audible autoplay videos should not get paused when outside the viewport https://bugs.webkit.org/show_bug.cgi?id=170610 <rdar://problem/31505984>

Reviewed by Eric Carlson.

Source/WebCore:

Audible autoplay videos should not get paused when outside the viewport as this
would be observable by the user.

Test: media/video-restricted-invisible-autoplay-allowed-if-audible.html

* html/MediaElementSession.cpp:
(WebCore::MediaElementSession::autoplayPermitted):

LayoutTests:

Add layout test coverage.

* media/video-restricted-invisible-autoplay-allowed-if-audible-expected.txt: Added.
* media/video-restricted-invisible-autoplay-allowed-if-audible.html: Copied from LayoutTests/media/video-restricted-invisible-autoplay-not-allowed.html.
* media/video-restricted-invisible-autoplay-allowed-when-visible.html:
* media/video-restricted-invisible-autoplay-not-allowed.html:


Canonical link: https://commits.webkit.org/187548@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215120 268f45cc-cd09-0410-ab3c-d52691b4dbfc